# urc-machiato-2026

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  rules.md
.github/: TODO_INGESTION_GUIDE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  task.yml  visual_artifact.yml
.github/workflows/: add-to-project.yml  auto-assign-pr.yml  auto-label-area.yml  lint-python.yml  populate-from-todo-files.yml  pr-title-check.yml  pr-welcome.yml  stale-issues.yml  status-automation.yml  sync-labels.yml  todo-to-issues.yml  validate-links.yml
Autonomy/: .gitignore  .project-structure.md  CODE_STYLE.md  CRITICAL_PRIORITY_TASKS.md  DEVELOPMENT_STRATEGY.md  ONBOARDING.md  QUICKSTART.md
Autonomy/calibration/: CALIBRATION_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PRACTICAL_WORKFLOW.md  QUICK_START.txt  QUICK_START_NEW_SYSTEM.md  README.md  TAG_METADATA_GUIDE.md  YOUR_SETUP.md  tag_assignments_template.json
Autonomy/calibration/aruco_tags/: ARUCO_GENERATION_GUIDE.md  ARUCO_QUICK_REFERENCE.md  QUICK_REFERENCE.md  TEMPLATE_MERGE_GUIDE.md  aruco_sheets.py  aruco_validator.py  generate_aruco_tag.py
Autonomy/calibration/camera/: MULTI_CAMERA_GUIDE.md  QUICK_START.md  calibrate_from_markers.py  calibrate_multiple_cameras.py  calibration_TODO.md  detect_with_multiple_calibrations.py  my_camera.json  quick_calibration.py
Autonomy/calibration/charuco_board/: camera_calibrator.py  generate_chessboard.py
Autonomy/calibration/extrinsics/: __init__.py  hand_eye_imu_calibrator.py  ros2_calibration_node.py
Autonomy/calibration/hand_eye/: hand_eye_calibration.py
Autonomy/calibration/intrinsics/: __init__.py  calibration_cli.py  camera_intrinsics_calibrator.py
Autonomy/calibration/print/: aruco_cutout_1cm.studio3  aruco_cutout_2cm.studio3
Autonomy/code/: test_led_coordination.py
Autonomy/code/autonomous_typing/: CMakeLists.txt  COMPLETION_STATUS.txt  IMPLEMENTATION_SUMMARY.md  README.md  TYPING_ARUCO_DETECTION.md  autonomous_typing_TODO.md  setup.cfg  setup.py  test_typing_aruco.py
Autonomy/code/autonomy_interfaces/: CMakeLists.txt  TODO.md
Autonomy/code/autonomy_interfaces/action/: NavigateToPose.action  PerformTyping.action
Autonomy/code/autonomy_interfaces/msg/: ArmAlignmentCommand.msg  CameraCommand.msg  FollowMeStatus.msg  LedCommand.msg  NavigationStatus.msg  SafetyStatus.msg  SlamStatus.msg  StateTransition.msg  SystemState.msg  TypingGoal.msg  VisionDetection.msg
Autonomy/code/autonomy_interfaces/srv/: CalibrateCamera.srv  ChangeState.srv  ConfigureMission.srv  DetectAruco.srv  DetectMissionAruco.srv  FollowMeControl.srv  GetSubsystemStatus.srv  GetSystemState.srv  LoadCalibrationParameters.srv  RecoverFromSafety.srv  SwitchMode.srv  ValidateCalibration.srv
Autonomy/code/computer_vision/: CMakeLists.txt  computer_vision_TODO.md  setup.cfg  setup.py
Autonomy/code/led_status/: CMakeLists.txt  README.md  led_status_TODO.md  setup.cfg  setup.py  test_led_integration.py
Autonomy/code/navigation/: AUTONOMOUS_NAVIGATION_DESIGN.md  CMakeLists.txt  navigation_TODO.md  setup.cfg  setup.py
Autonomy/code/navigation/autonomy_navigation/: gnss_processor.py  motion_controller.py  navigation_node.py  path_planner.py  sensor_integration.py  terrain_classifier.py
Autonomy/code/navigation/resource/: autonomy_navigation
Autonomy/code/simulation/: CMakeLists.txt  (+4 more)
Autonomy/code/state_management/: CMakeLists.txt  CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MISSION_ARUCO_DETECTION.md  QUICKSTART.md  README.md  STATE_DIAGRAM.md  sanity_check_report.md  setup.cfg  setup.py  state_management_TODO.md  test_follow_me.py  test_mission_aruco.py  test_race_conditions.py
Autonomy/code/state_management/autonomy_state_machine/: __init__.py  aruco_alignment_calculator.py  follow_me_behavior.py  follow_me_frontend.py  frontend_interface.py  led_state_publisher.py  mission_aruco_detector.py  safety_manager.py  state_machine_core.py  state_machine_director.py  states.py  subsystem_coordinator.py  transition_validator.py
Autonomy/code/state_management/autonomy_state_management/: __init__.py  state_management_node.py
Autonomy/code/state_management/config/: state_machine_config.yaml
Autonomy/code/state_management/docs/: FOLLOW_ME_FEATURE.md  state_machine_analysis.md
Autonomy/code/state_management/launch/: state_machine.launch.py
Autonomy/code/state_management/resource/: autonomy_state_management
Autonomy/code/state_management/tests/: __init__.py  test_integration.py  test_state_machine.py
Autonomy/code/state_management/tools/: state_transition_simulator.py  test_core_states.py
Autonomy/config/: calibration_manager.yaml
Autonomy/deployment/: ClientServerArchitecture.md  RaspberryPiDeployment.md
Autonomy/development/: CrossPlatformDevelopment.md  DockerSetup.md  SimulationSetup.md
Autonomy/docs/: TechnicalOverview.md
Autonomy/interfaces/: README.md  usage_examples.py
Autonomy/launch/: system_integration.launch.py
Autonomy/scripts/: check_code.sh  code_unified_option.py  create_ros2_packages.py  daily_velocity_check.py  decision_framework.py  navigate.sh  validate_infrastructure.py  velocity_tools.py
Autonomy/simulation/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  SIMULATION_VALIDATION_CHECKLIST.md
Autonomy/simulation/config/: sensor_parameters.yaml
Autonomy/simulation/launch/: rover_gazebo.launch.py
Autonomy/simulation/test_scenarios/: README.md  autonomous_waypoint_navigation.py  gps_denied_slam.py
Autonomy/simulation/tools/: generate_simulation_report.py  sensor_quality_analyzer.py
Autonomy/simulation/worlds/: gps_denied_area.world  urc_desert_terrain.world  urc_obstacles.world
Autonomy/tests/: integration_test.py
RobotDefinition/: BOM.md
data/: daily_check_results.json  mvp_validation.json  progress_analysis.json  velocity_history.json
docs/onboard/: ProjectBoard.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: extract-todos-to-issues.py
tasks/: AutonomyTeamTasks.md  VELOCITY_RISK_FRAMEWORK.md  constraints.md
(+165 files in other folders)
